@@ -1,6 +1,11 @@
 language: python
-python: "2.7"
+python: 2.7
+env:
+  - PLONE_VERSION=4.2
+  - PLONE_VERSION=4.3
 install:
+  - sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
+  - mkdir -p buildout-cache/downloads
   - python bootstrap.py -c travis.cfg
-  - bin/buildout -c travis.cfg -t 3
+  - bin/buildout -c travis.cfg -N -q -t 3
 script: bin/test
