@@ -1,190 +1,0 @@
-<tal:status define="status view/status" condition="status">
-    <dl class="portalMessage error"
-        tal:condition="view/widgets/errors">
-        <dt i18n:domain="plone"
-            i18n:translate="">
-            Error
-        </dt>
-        <dd tal:content="status" />
-    </dl>
-
-    <dl class="portalMessage info"
-        tal:condition="not: view/widgets/errors">
-        <dt i18n:domain="plone"
-            i18n:translate="">
-            Info
-        </dt>
-        <dd tal:content="status" />
-    </dl>
-</tal:status>
-
-<div tal:define="errors view/widgets/errors" tal:condition="errors">
-    <div tal:repeat="error errors">
-        <tal:block
-            condition="not:nocall:error/widget"
-            replace="structure error/render"
-            />
-    </div>
-</div>
-
-<p  class="discreet"
-    tal:define="description view/description | nothing"
-    tal:content="description">
-        <tal:comment replace="nothing">Description</tal:comment>
-</p>
-
-<form class="rowlike enableUnloadProtection" action="." method="post"
-      tal:define="groups view/groups | nothing;
-                  form_name view/form_name | nothing;
-                  default_fieldset_label view/default_fieldset_label | form_name;
-                  enable_form_tabbing view/enable_form_tabbing | python:True;
-                  has_groups python:bool(groups);
-                  form_tabbing python:(has_groups and enable_form_tabbing) and 'enableFormTabbing' or '';
-                  show_default_label python:has_groups and default_fieldset_label and len(view.widgets);"
-      tal:attributes="action request/getURL; enctype view/enctype;
-                      class python:'rowlike enableUnloadProtection %s kssattr-formname-%s' % (form_tabbing, request.getURL().split('/')[-1]);
-                      id view/id">
-  <input type="hidden"
-       name="fieldset.current"
-       tal:define="current_fieldset request/fieldset.current | string:#fieldsetlegend-default"
-       tal:condition="python:has_groups and enable_form_tabbing"
-       tal:attributes="value current_fieldset" />
-
-  <!-- Default fieldset -->
-
-  <metal:define define-macro="fields"
-                tal:define="show_default_label show_default_label|nothing;
-                            has_groups has_groups|nothing">
-
-    <fieldset id="fieldset-default"
-              tal:omit-tag="not:show_default_label">
-
-        <legend tal:condition="show_default_label"
-                tal:attributes="id string:fieldsetlegend-default"
-                tal:content="default_fieldset_label">Form name</legend>
-
-
-        <div class="row horizontal map-wrapper">
-          <script type="text/javascript">
-            jq(document).ready( function() {
-                jq('#cgeo-get-location').click(function(){
-                  cgmap.geocoding('geoshapemap',
-                  'Edit',
-                  cgmap.portal_url + '/geocoderview')});
-            });
-          </script>
-          <metal:use use-macro="context/@@collectivegeo-macros/geocoding"/>
-          <div class="field map-wrapper">
-            <label>
-              <span i18n:translate=""
-                    i18n:domain="collective.geo.contentlocations">Coordinates</span>
-            </label>
-            <div class="formHelp"
-                  i18n:translate=""
-                  i18n:domain="collective.geo.contentlocations">
-                  Choose a tool and draw the shape on the map</div>
-               <metal:use use-macro="context/@@collectivegeo-macros/openlayers"/>
-               <metal:map use-macro="context/@@collectivegeo-macros/map-widget" />
-          </div>
-        </div>
-
-        <div class="row horizontal">
-          <dl class="collapsible collapsedOnLoad">
-            <dt class="collapsibleHeader" i18n:translate="" i18n:domain="collective.geo.contentlocations">Manual coordinates</dt>
-            <dd class="collapsibleContent">
-
-          <metal:define define-macro="widget_rendering">
-              <tal:widgets repeat="widget view/widgets/values">
-                <div class="horizontal"
-                     tal:define="hidden python:widget.mode == 'hidden'"
-                     tal:omit-tag="hidden">
-
-                  <metal:field define-macro="field">
-                    <div class="field"
-                         tal:define="error widget/error;
-                             error_class python:error and ' error' or ' ';
-                             fieldname_class string:kssattr-fieldname-${widget/name};"
-                         tal:attributes="class string:field ${fieldname_class}${error_class};
-                                 id string:formfield-${widget/id};">
-
-                      <label for="" class="horizontal"
-                             tal:attributes="for widget/id"
-                             tal:condition="not:hidden">
-                        <span i18n:translate=""
-                              tal:content="widget/label">label</span>
-                      </label>
-
-                      <span class="fieldRequired horizontal" title="Required"
-                            tal:condition="python:widget.required and not hidden"
-                            i18n:translate="label_required"
-                            i18n:attributes="title title_required;">
-                        (Required)
-                      </span>
-
-                      <div class="formHelp"
-                           tal:define="description widget/field/description"
-                           i18n:translate=""
-                           tal:content="description"
-                           tal:condition="python:description and not hidden">
-                           field description</div>
-
-              <div class="fieldErrorBox"
-                   tal:content="structure error/render|nothing">
-                <tal:comment replace="nothing">Error</tal:comment>
-              </div>
-
-                      <div class="widget z3cformInlineValidation horizontal">
-                        <input type="text" tal:replace="structure widget/render" />
-                      </div>
-                    </div>
-                  </metal:field>
-
-                </div>
-              </tal:widgets>
-          </metal:define>
-
-
-            </dd>
-          </dl>
-        </div>
-
-    </fieldset>
-
-    <!-- Secondary fieldsets -->
-
-    <tal:block tal:repeat="group groups" condition="has_groups">
-        <fieldset
-            tal:define="fieldset_name repeat/group/index"
-            tal:attributes="id string:fieldset-${fieldset_name};
-                            class string:kssattr-fieldset-${fieldset_name}">
-                <legend tal:define="form_name group/label"
-                        tal:condition="form_name"
-                        tal:attributes="id string:fieldsetlegend-${repeat/group/index}"
-                        tal:content="form_name">Form name</legend>
-
-                <p i18n:translate=""
-                   tal:define="group_description group/description|nothing"
-                   tal:condition="group_description"
-                   tal:content="group_description">
-                    Description
-                </p>
-
-                <tal:block define="view nocall:group">
-                    <metal:block use-macro="context/@@ploneform-macros/widget_rendering" />
-                </tal:block>
-
-        </fieldset>
-    </tal:block>
-  </metal:define>
-
-  <metal:define define-macro="actions">
-
-    <div class="formFields" tal:condition="view/actions/values|nothing">
-        <tal:block repeat="action view/actions/values">
-          <input type="submit"
-            tal:replace="structure action/render" />
-        </tal:block>
-    </div>
-  </metal:define>
-
-</form>
