@@ -14,21 +14,21 @@ from collective.geo.mapwidget.maplayers import MapLayer
 
 from collective.geo.settings.interfaces import IGeoCustomFeatureStyle
 
-from collective.geo.contentlocations import ContentLocationsMessageFactory as _
-from collective.geo.contentlocations.browser.geostylesform \
-                                                  import GeoStylesForm
-from collective.geo.contentlocations.interfaces import IGeoManager
+from collective.z3cform.mapwidget.widget import MapFieldWidget
 
-#from shapely.geos import ReadingError
+from .. import ContentLocationsMessageFactory as _
+from .geostylesform import GeoStylesForm
+from ..interfaces import IGeoManager
 
 
 class GeoShapeForm(extensible.ExtensibleForm, form.Form):
     implements(IMapView)
-    template = ViewPageTemplateFile('geoshapeform.pt')
+
     form_name = "edit_geometry"
     id = 'coordinates-form'
     description = _(u"Specify the geometry for this content")
     fields = field.Fields(IGeoManager).select('wkt')
+    fields['wkt'].widgetFactory = MapFieldWidget
     mapfields = ['geoshapemap']
 
     groups = (GeoStylesForm,)
@@ -36,9 +36,10 @@ class GeoShapeForm(extensible.ExtensibleForm, form.Form):
     message_ok = _(u'Changes saved.')
     message_cancel = _(u'No changes made.')
     message_georeference_removed = _(u'Coordinates removed')
-    message_coordinates_null = _(u"No coordinate has been set. Please, set "
-                                  "coordinates on the map or fill the WKT "
-                                  "field.")
+    message_coordinates_null = _(
+        u"No coordinate has been set. Please, set "
+        u"coordinates on the map or fill the WKT field.")
+
     message_error_wkt = _(u'WKT expression not correct. Verify input.')
     message_error_input = _(u'No valid input given.')
 
@@ -51,7 +52,8 @@ class GeoShapeForm(extensible.ExtensibleForm, form.Form):
         props_tool = getToolByName(portal, 'portal_properties')
         site_props = getattr(props_tool, 'site_properties')
         self.typesUseViewActionInListings = list(
-                    site_props.getProperty('typesUseViewActionInListings'))
+            site_props.getProperty('typesUseViewActionInListings')
+        )
 
     @property
     def next_url(self):
@@ -76,8 +78,8 @@ class GeoShapeForm(extensible.ExtensibleForm, form.Form):
             return
 
         # set content geo style
-        geostylesgroup = [gr for gr in self.groups \
-                    if gr.__class__.__name__ == 'GeoStylesForm']
+        geostylesgroup = [gr for gr in self.groups
+            if gr.__class__.__name__ == 'GeoStylesForm']
         if geostylesgroup:
             stylemanager = IGeoCustomFeatureStyle(self.context)
             fields = geostylesgroup[0].fields
@@ -108,7 +110,8 @@ class GeoShapeForm(extensible.ExtensibleForm, form.Form):
         self.setStatusMessage(self.message_cancel)
         self.redirectAction()
 
-    @button.buttonAndHandler(_(u'Remove georeference'), name='remove-georeference')
+    @button.buttonAndHandler(
+        _(u'Remove georeference'), name='remove-georeference')
     def handleRemoveGeoreference(self, action):
         self.geomanager.removeCoordinates()
         self.setStatusMessage(self.message_georeference_removed)
@@ -125,10 +128,12 @@ class GeoShapeForm(extensible.ExtensibleForm, form.Form):
 
         try:
             geom = self.verifyWkt(data['wkt']).__geo_interface__
-            self.geomanager.setCoordinates(geom['type'],
-                                            geom['coordinates'])
+            self.geomanager.setCoordinates(
+                geom['type'],
+                geom['coordinates']
+            )
             return True, self.message_ok
-        except: #ReadingError: is a subclass of generic exception
+        except:  # ReadingError: is a subclass of generic exception
             return False, self.message_error_wkt
 
     def verifyWkt(self, data):
@@ -141,31 +146,8 @@ class GeoShapeForm(extensible.ExtensibleForm, form.Form):
         return geom
 
 
-manageCoordinates = wrap_form(GeoShapeForm, label=_(u'Coordinates'),
-                  description=_(u"Modify geographical data for this content"))
-
-
-# class ShapeMapWidget(MapWidget):
-
-#     mapid = 'geoshapemap'
-#     _layers = ['shapeedit']
-
-#     @property
-#     def js(self):
-#         return """
-#   jq(window).bind('map-load', function(e, map) {
-#     var layer = map.getLayersByName('Edit')[0];
-#     var elctl = new OpenLayers.Control.WKTEditingToolbar(layer, {wktid: '%s'});
-#     map.addControl(elctl);
-#     elctl.activate();
-#   });
-#         """ % self.view.widgets['wkt'].id
-
-
-# class ShapeEditLayer(MapLayer):
-
-#     name = 'shapeedit'
-
-#     jsfactory = """
-#     function() { return new OpenLayers.Layer.Vector('Edit');}
-#     """
+manageCoordinates = wrap_form(
+    GeoShapeForm,
+    label=_(u'Coordinates'),
+    description=_(u"Modify geographical data for this content")
+)
