@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>2.5</version>
+  <version>2.6</version>
   <dependencies>
     <dependency>profile-collective.geo.geographer:default</dependency>
     <dependency>profile-collective.geo.mapwidget:default</dependency>
