@@ -1,6 +1,13 @@
 [buildout]
 extends =
-    http://svn.plone.org/svn/collective/buildout/plonetest/test-4.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/travis-4.3.x.cfg
+
+package-name = collective.geo.contentlocations
+package-extras = [test]
+
+allow-hosts +=
+    code.google.com
+    robotframework.googlecode.com
 
 extensions =
     mr.developer
@@ -11,26 +18,11 @@ always-checkout = force
 sources-dir = extras
 github-url = https://github.com/
 
-package-name = collective.geo.contentlocations
-package-extras = [test]
-test-eggs =
-
-# avoid timeouts by downloading only from known hosts
-allow-hosts =
-    *.plone.org
-    *.python.org
-    *.zope.org
-    docutils.sourceforge.net
-    effbot.org
-    prdownloads.sourceforge.net
-
-
-[versions]
-zc.buildout = 1.6.3
 
 [sources]
 collective.geo.geographer = git ${buildout:github-url}collective/collective.geo.geographer.git
 collective.geo.openlayers = git ${buildout:github-url}collective/collective.geo.openlayers.git
 collective.geo.settings = git ${buildout:github-url}collective/collective.geo.settings.git
 collective.geo.mapwidget = git ${buildout:github-url}collective/collective.geo.mapwidget.git
-collective.z3cform.colorpicker = git ${buildout:github-url}gborelli/collective.z3cform.colorpicker.git
+collective.z3cform.mapwidget = git ${buildout:github-url}collective/collective.z3cform.mapwidget.git
+# collective.z3cform.colorpicker = git ${buildout:github-url}gborelli/collective.z3cform.colorpicker.git
